<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingTop="@dimen/padding_top"
    android:paddingStart="4dp"
    android:paddingEnd="@dimen/padding_end"
    android:background="?attr/colorOnPrimary">

    <Button
        android:id="@+id/backButtonSettingsActivity"
        android:layout_marginBottom="24dp"
        android:text="@string/Settings"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="@dimen/main_text_size"
        android:letterSpacing="0"
        android:fontFamily="@font/ys_display_regular"
        android:textFontWeight="500"
        android:textColor="?attr/colorOnSecondary"
        android:textAllCaps="false"
        android:gravity="left"
        style="@style/Widget.AppCompat.Button.Borderless.Colored"
        app:icon="@drawable/arrow_back"
        app:iconGravity="textStart"
        app:iconPadding="24dp"
        app:iconTint="?attr/colorOnSecondary"
        tools:ignore="RtlHardcoded,UnusedAttribute">
        </Button>

    <Switch
        android:id="@+id/switch1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp"
        android:layout_marginStart="16dp"
        android:text="@string/black"
        android:textSize="@dimen/settings_text_size"
        android:letterSpacing="0"
        android:fontFamily="@font/ys_display_medium"
        android:textFontWeight="400"
        android:textColor="?attr/colorOnSecondary"
        tools:ignore="UnusedAttribute,UseSwitchCompatOrMaterialXml"
        />

    <Button
        android:id="@+id/shareApp"
        android:text="@string/share"
        app:icon="@drawable/share"
        style="@style/buttonSettingsMenu"/>

    <Button
        android:id="@+id/writeSupport"
        android:text="@string/help"
        app:icon="@drawable/support"
        style="@style/buttonSettingsMenu"/>

    <Button
        android:id="@+id/termsUse"
        android:text="@string/terms"
        app:icon="@drawable/arrow_forward"
        style="@style/buttonSettingsMenu"/>


</LinearLayout>