<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical"
    android:paddingTop="@dimen/padding_top"
    android:paddingStart="17dp"
    android:paddingEnd="@dimen/padding_end"
    android:background="?attr/colorPrimary">


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/playlist_maker"
        android:textSize="@dimen/main_text_size"
        android:fontFamily="@font/ys_display_medium"
        android:textFontWeight="500"
        android:textColor="@color/white"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_marginTop="40dp"
        android:layout_marginBottom="12dp">


        <Button
            android:id="@+id/searchButton"
            android:layout_width = "match_parent"
            android:layout_height= "match_parent"
            android:text="@string/Search"
            app:icon="@drawable/search"
            style="@style/buttonMainMenu"/>

        <Button
            android:id="@+id/mediatekaButton"
            android:layout_width = "match_parent"
            android:layout_height= "match_parent"
            android:text="@string/mediateka"
            app:icon="@drawable/mediateka"
            style="@style/buttonMainMenu" />

        <Button
            android:id="@+id/settingsButton"
            android:layout_width = "match_parent"
            android:layout_height= "match_parent"
            android:text="@string/Settings"
            app:icon="@drawable/settings"
            style="@style/buttonMainMenu"/>

    </LinearLayout>

</LinearLayout>